overflow fix

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -35,7 +35,6 @@
 html, body {
     width: 100vw;
     max-width: 100vw;
-    position: relative;
     overflow-x: hidden;
 }
 
